tests/miniJava/neg/000273_mutation.MiniJava
class java { public static void Main false String [ ] java ) { { } } }
